--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <section class="hero">
 <div class="hero-content">
 <div class="hero-item">
-<h2>Transaksi Anti Ribet dan Aman Cuma di IDRekber</h2>
-<p>Bangun Kepercayaan Konsumen di Mulai dari Transaksi yang Aman dan Nyaman Bersama <b>IDRekber.com</b></p>
+<h2>Transaksi Anti Ribet dan Aman Cuma di namaweb.com</h2>
+<p>Bangun Kepercayaan Konsumen di Mulai dari Transaksi yang Aman dan Nyaman Bersama <b>namaweb.com</b></p>
 </div>
 <div class="hero-item">
 <img src="asset/image/hero.png" alt="hero" itemprop="image"/>
